feat [accesses]: add reject of accesses
